# python-fastapi-cognito-jwt-verification

./: .env.example  main.py  pyproject.toml
app/: dependencies.py  main.py
python_fastapi_cognito_jwt_verification/: config.py  dependencies.py  main.py
