[project]
name = "python-fastapi-cognito-jwt-verification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.8.1",
    "pyjwt[crypto]>=2.10.1",
]

[dependency-groups]
dev = ["ruff>=0.11.6"]
